--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
 html {
-    background-color: lavenderblush;
+    /* background-color: lavenderblush; */
+    background-color: #F2F2F2;
     /* font-size: 88px; */
+    /* overflow: hidden; */
+    color: #0D0D0D;
 }
+
