--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Spicy+Rice&display=swap');
 html {
     /* background-color: lavenderblush; */
     background-color: #F2F2F2;
     /* font-size: 88px; */
     /* overflow: hidden; */
     color: #0D0D0D;
+    /* font-family: 'Spicy Rice', cursive; */
+
 }
+
 
