--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,4 +1,5 @@
-header a {
+header a,
+header h3 {
     transition: all 0.2s;
 }
 
@@ -6,4 +7,9 @@ header a:hover {
     width: 28px !important;
     height: 28px !important;
 
+}
+
+header h3:hover {
+    color: #07e;
+    font-size: 32px;
 }
