--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -11,5 +11,7 @@ header a:hover {
 
 header h3:hover {
     color: #07e;
-    font-size: 32px;
+    /* font-size: 32px; */
+    transform: scale(1.1);
+    
 }
