--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Spicy+Rice&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Spicy+Rice&display=swap'); */
+@import url('https://fonts.loli.net/css?family=Spicy+Rice&display=swap');
 html {
     /* background-color: lavenderblush; */
     background-color: #F2F2F2;
