--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@ section {
     width: 100%;
     align-items: center;
     justify-content: center;
-    background: #000;
+    /* background: #000; */
     overflow: hidden;
 }
   
