--- a/app/poster/index.css
+++ b/app/poster/index.css
@@ -89,10 +89,10 @@
 }
 
 .editor-text-code {
-  background-color: rgb(240, 242, 245);
-  padding: 1px 0.25rem;
-  font-family: Menlo, Consolas, Monaco, monospace;
-  font-size: 94%;
+  /* background-color: rgb(240, 242, 245); */
+  /* padding: 1px 0.25rem; */
+  /* font-family: Menlo, Consolas, Monaco, monospace; */
+  /* font-size: 94%; */
 }
 
 .editor-link {
